<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feelings</string>
    <string name="version_title">Version</string>
    <string name="version">Version v0.6.6</string>
    <string name="version_sum">Updated package system (eu.vstepik.feelings), some functionalities and deleted some unused things and added spinner (dropdown).</string>
    <string name="feeling0">Dying</string>
    <string name="feeling1">Bad</string>
    <string name="feeling2">Negative</string>
    <string name="feeling3">Neutral</string>
    <string name="feeling4">Positive</string>
    <string name="feeling5">Good</string>
    <string name="feeling6">Amazing!</string>
    <string name="how_do_i_feel_today">How do You feel today?</string>
    <string name="feeling_recorded">Today\'s feeling saved</string>
    <string name="feeling_changed">Today\'s feeling changed</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="notification">Notification settings</string>
    <string name="notification_time">Time</string>
    <string name="graph">Graph</string>
    <string name="stats">Stats</string>
    <string name="best_day">Best Day</string>
    <string name="best_month">Best Day</string>
    <string name="authors">Authors</string>
    <string name="david_sum"><a href="http://www.destil.cz/">Android Developer, Inmite s.r.o</a></string>
    <string name="david">David Vávra</string>
    <string name="stepan_sum"><a href="http://www.vstepik.github.com/">Android Developer, Freelance</a></string>
    <string name="stepan">Štěpán Víteček</string>
    <string name="sorry">Sorry, this service will be available in next version.</string>
</resources>