<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" 
  android:key="settings">
   <PreferenceCategory 
        android:title="@string/version_title" 
        android:order="1" 
        android:key="Version">
        <Preference 
            android:order="2" 
            android:title="@string/version" 
            android:summary="@string/version_sum" 
            android:key="version" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/authors" 
        android:order="1" 
        android:key="Authors">
        <Preference 
            android:order="2" 
            android:title="@string/stepan" 
            android:summary="@string/stepan_sum" 
            android:key="author"
            android:autoLink="web"
            android:linksClickable="true" />
        <Preference 
            android:order="3" 
            android:title="@string/david" 
            android:summary="@string/david_sum" 
            android:key="author"
            android:autoLink="web"
            android:linksClickable="true" />
    </PreferenceCategory>
</PreferenceScreen>